# linear_regression_model

./: README.md
summative/API/: multivariate.ipynb  prediction.py  pyproject.toml  requirements.txt  scaler.pkl
summative/FlutterApp/lib/: main.dart
