[tool.poetry]
name = "depression-prediction-api"
version = "0.1.0"
description = "API for predicting depression scores using machine learning models."
authors = ["Nhial Majok <n.riak@alustudent.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "prediction.py"

[[tool.poetry.packages]]
include = "best_model.pkl"

[[tool.poetry.packages]]
include = "scaler.pkl"